assets/queries/k8s/ingress_target_has_service_not_defined/test/positive.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 0
      - path: /bar
        pathType: Prefix
        backend:
          service:
            port:
              number: 8080
