assets/queries/k8s/ingress_target_has_service_not_defined/test/positive_expected_result.json
[
	{
		"queryName": "Ingress Target Has Service Not Defined",
		"severity": "LOW",
		"line": 13
	},
	{
		"queryName": "Ingress Target Has Service Not Defined",
		"severity": "LOW",
		"line": 20
	}
]
